overflow resolved

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@
   height: 100vh;
   width: 100%;
   background-color: red;
+  overflow: hidden;
 }
 
 /*main*/
@@ -57,7 +58,8 @@
 /*box dx*/
 
 .dx{
-  
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .header-upgrade{
@@ -67,6 +69,7 @@
   text-align: right;
   line-height: 80px;
   position: fixed;
+  z-index: 1;
 }
 
 .btn-big{
@@ -78,10 +81,9 @@
 }
 
 .main-contenuti{
-  height: calc(100% - 80px);
-  width: 100%;
   margin-top: 80px;
-  margin-bottom: 60px;
+  width: 100%;
+  
 }
 
 /*aside box sx*/
@@ -90,7 +92,7 @@ aside{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow-y: hidden;
+  height: 100%;
 }
 
 .main-box-sx{
